projects/verticulture/assets/css/style.css
/* ... */
#header .main-navigation .navbar-header img {
	/*height: auto;*/
	/*display: inline-block;*/
	/*float: left;*/
	/*height: 30px; //adjusted so logo/banner and navbar toggle fit on same line*/
}
#header .nav {
    list-style: none;
    margin-top: 16px
}
#header .nav li {
    margin: 0 0 0 24px
}
#header .nav li a {
    text-transform: uppercase;
    padding: 5px 0;
    color: #496B5F;
    font-weight: 300;
    position: relative
}
#header .nav li a:after {
    position: absolute;
    top: 100%;
    left: 0;
    border-bottom: 2px solid #496B5F;
    width: 100%;
    content: '';
    opacity: 0;
    -webkit-transition: opacity .3s, -webkit-transform .3s;
    -moz-transition: opacity .3s, -moz-transform .3s;
    transition: opacity .3s, transform .3s;
    -webkit-transform: translateY(10px);
    -moz-transform: translateY(10px);
    transform: translateY(10px)
}
#header .nav li.active a:after,
#header .nav li.active a,
#header .nav li a:hover::after,
#header .nav li a:hover,
#header .nav li a:focus {
    background: 0 0;
    opacity: 1;
    color: #496B5F;
    -webkit-transform: translateY(0px);
    -moz-transform: translateY(0px);
    transform: translateY(0px)
}
#header .affix {
    -webkit-animation-duration: 1s;
    animation-duration: 1s;
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
    -webkit-animation-name: fadeInDown;
    animation-name: fadeInDown
}
#header .affix .navbar-brand {
    padding: 12px
}
#header .affix .navbar-brand img {
    width: 80%
}
#header .affix .nav {
    margin-top: 10px
}
#intro {
    background: url(../img/background/2.jpg) center center no-repeat;
    background-size: cover;
    color: #fff;
    text-align: center;
    padding-top: 18vh;
    padding-bottom: 35vh;
    margin-top: 60px; //used for fixed navbar, delete otherwise
}
#intro .overlay {
    background: url(../img/background/bg-overlay.png) rgba(0, 0, 0, .6) repeat;

}
#intro .main-text {
    padding: 0 20px;
}
#intro .main-text h1 {
    font-weight: 700;
    font-size: 62px;
}
#intro .main-text h1 span {
  	font-family: 'Lane';

}
#intro .main-text h2 {
    color: #fff;
    font-size: 30px;
    font-weight: 300;
    line-height: 28px
}
#intro .main-text .btn {
    font-size: 20px;
    padding: 12px 30px;
    margin-top: 30px
}
#services {
    background: #fff;
    padding-bottom: 50px
}
#services .service-box {
    position: relative;
    border: 1px solid #496B5F;
    margin-bottom: 48px
}
#services .content {
    color: #fff;
    text-align: center;
    background: #496B5F;
    border: 4px solid #fff;
    padding: 10px 14px
}
#services .content h2 {
    font-size: 20px;
    font-weight: 300;
    text-transform: uppercase
}
#services .content p {
    line-height: 22px;
    font-weight: 300
}
#services .icon-wrapper {
    background: #fff;
    border-radius: 50%;
    height: 54px;
    left: -7px;
    padding: 3px;
    position: absolute;
    top: -30px;
    width: 54px
}
#services .icon-wrapper i {
    background: #fff;
    color: #496B5F;
    border: 2px solid #496B5F;
    border-radius: 50%;
    font-size: 30px;
    height: 48px;
    line-height: 48px;
    text-align: center;
    width: 48px;
    -webkit-transition: all .5s ease;
    -moz-transition: all .5s ease;
    transition: all .5s ease
}
#services .service-box:hover i {
    background: #496B5F;
    color: #fff
}
#about {
    /*background: url(../img/background/4.jpg) center center no-repeat;*/
	background-color: #103643;
    background-size: cover;
    /*color: #fff*/
}

#about .section-title {
	/*background: url(../img/background/bg-overlay.png) rgba(0, 0, 0, .6) repeat;*/
	
}
#about .side-left {
    text-align: center
}
#about .side-left img {
    border-radius: 4px;
    padding-bottom: 12px
}
#about .side-left .info h4 {
    font-size: 22px;
    font-weight: 300;
    line-height: 12px
}
#about .side-left .info p {
    font-weight: 300;
    font-size: 14px;
    letter-spacing: 1.1px;
    position: relative
}
#about .side-left .info p:after {
    background: #fff;
    content: "";
    height: 5px;
    left: 32%;
    position: absolute;
    top: 125%;
    width: 34%
}
#about .side-right p {
	color: #fff;
    padding: 0 20px;
    font-weight: 300;
    font-size: 16px;
    text-align: justify;
}
#about .owl-theme .owl-controls .owl-page span {
    background: 0 0;
    display: none
}
#portfolio .controls {
    text-align: center;
    margin-bottom: 20px
}
#portfolio .controls .btn {
    margin: 10px 5px;
    text-transform: uppercase;
    font-weight: 300
}
#portfolio .portfolio-items .mix {
    width: 24%;
    overflow: hidden
}
#portfolio .portfolio-items figure {
    background: #fff;
    float: left;
    margin: 5px;
    width: 100%;
    height: 100%;
    padding: 5px;
    border: 1px solid #F3F3F3;
    position: relative
}
#portfolio .portfolio-items figure .img {
    position: relative
}
#portfolio .portfolio-items figure .img img {
    max-width: 100%;
    height: auto;
    vertical-align: middle
}
#portfolio .portfolio-items figure .img .overlay {
    display: block;
    background: rgba(0, 0, 0, .8);
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    overflow: hidden;
    -webkit-transition: all .5s;
    -moz-transition: all .5s;
    transition: all .5s;
    z-index: 20;
    opacity: 0
}
#portfolio .portfolio-items figure .img a {
    background: #fff;
    font-size: 22px;
    padding: 8px 14px;
    position: absolute;
    text-align: center;
    -webkit-transition: all .5s;
    -moz-transition: all .5s;
    transition: all .5s;
    opacity: 0
}
#portfolio .portfolio-items figure .img .link-left {
    left: -22%;
    top: 45%;
    margin: 0 auto
}
#portfolio .portfolio-items figure .img .link-right {
    right: -22%;
    top: 45%;
    margin: 0 auto
}
#portfolio .portfolio-items figure:hover .overlay {
    opacity: 1
}
#portfolio .portfolio-items figure:hover a.link-left {
    left: 30%;
    opacity: 1;
    color: #008A7D
}
/* ... */

